[package]
name = "intqual"
version = "1.0.4"
edition = "2024"
authors = ["Eren Keskinoğlu <erenkeskinoglu@outlook.com>"]
description = "A dual-layer asynchronous network latency analyzer and observability tool using unprivileged ICMP & TCP handshakes."
documentation = "https://github.com/RaijuMounun/intqual"
homepage = "https://github.com/RaijuMounun/intqual"
repository = "https://github.com/RaijuMounun/intqual"
readme = "README.md"
license = "MIT"
keywords = ["ping", "network", "tui", "icmp", "diagnostics"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.1"
socket2 = "0.6.4"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "time", "sync", "io-util"] }
tokio-rustls = "0.26"
rustls-pki-types = "1.0"
webpki-roots = "0.26"
tui-big-text = "0.8.8"
tokio-util = "0.7.18"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0.103"

[profile.release]
opt-level = 3    
lto = true       
codegen-units = 1
panic = "abort"  
strip = true     
