[package]
name = "intqual-core"
version = "1.2.0"
edition = "2024"
authors = ["Eren Keskinoğlu <erenkeskinoglu@outlook.com>"]
description = "Core engine for intqual"
license = "MIT"
repository = "https://github.com/RaijuMounun/intqual"

[dependencies]
tokio = { workspace = true }
socket2 = { workspace = true }
dns-lookup = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
